starting navigation menu

--- a/index.html
+++ b/index.html
@@ -40,6 +40,29 @@
       <hr>
     </header>
 
+    <!-- navigation bar -->
+    <div class="navbar">
+      <a href="" class="option active"><i class="fa fa-home" aria-hidden="true"></i>Home<i class="fa fa-sort-down" aria-hidden="true"></i></a>
+
+      <a href="" class="option">Blog</i><i class="fa fa-sort-down" aria-hidden="true"></i></a>
+
+      <a href="" class="option"><i class="fa fa-camera" aria-hidden="true"></i>Categories<i class="fa fa-sort-down" aria-hidden="true"></i></a>
+
+      <a href="" class="option">Reviews<i class="fa fa-sort-down" aria-hidden="true"></i></a>
+
+      <a href="" class="option">Contests<i class="fa fa-sort-down" aria-hidden="true"></i></a>
+
+
+      <a href="" class="option"><i class="fa fa-envelope" aria-hidden="true"></i>Contact Us<i class="fa fa-sort-down" aria-hidden="true"></i></a>
+
+      <a href="" class="option signed"><i class="fa fa-fw fa-user"></i>Sign In</a>
+      
+      <a href="" class="option signed"><i class="fa fa-user-plus" aria-hidden="true"></i>Sign Up</a>
+
+
+
+
+    </div>
   </div>
 
 </body>
